UI-2375: [PLF 4] Social - Space Configuration - Define avatar: alignment issue

--- a/webapp/resources/src/main/webapp/skin/less/social.less
+++ b/webapp/resources/src/main/webapp/skin/less/social.less
@@ -92,8 +92,19 @@
 			margin: 0 0 20px;
 			.changeAvatar {
 				text-align: center;
+				margin: 10px 0 0 10px;
 				a {
 					margin-bottom: 15px;
+				}
+			}
+		}
+		.uiAvatarUploader {
+			.avatarInfo {
+				a.avatarLargeWithBorder {
+					margin: 15px 0 0 15px;
+				}
+				.form-horizontal .control-label {
+					padding-top: 0;
 				}
 			}
 		}
